2008-06-13  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/file-view.c (file_view_query_tooltip):
	Show correct tooltip

2008-06-13  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/file-manager.ui:
	* plugins/file-manager/file-model.c (file_model_filter_file),
	(file_model_remove_file), (file_model_update_file),
	(file_model_add_file), (on_file_model_changed),
	(file_model_add_watch), (file_model_expand_row_real),
	(file_model_row_collapsed), (file_model_new), (file_model_refresh):
	* plugins/file-manager/file-model.h:
	* plugins/file-manager/file-view.c (file_view_refresh),
	(file_view_rename), (file_view_can_rename),
	(file_view_show_extended_data), (file_view_selection_changed),
	(file_view_init):
	* plugins/file-manager/file-view.h:
	* plugins/file-manager/plugin.c (on_file_manager_rename),
	(project_root_added), (project_root_removed),
	(on_file_view_show_popup_menu), (on_gconf_notify),
	(file_manager_activate):
	
	Big code reorganization in file-manger plugin. No more refresh as it now
	listens to file system changes and an extended selection view.

2008-06-13  Johannes Schmid <jhs@gnome.org>

	* configure.in: Require gio-2.0 >= 2.16.0 (GNOME stable)
	* plugins/file-manager/file-model.c (file_model_add_dummy),
	(file_model_filter_file), (file_model_expand_row_real),
	(file_model_row_expanded), (file_model_row_collapsed),
	(file_model_expand_cancelled), (file_model_init),
	(file_model_finalize), (file_model_set_property), (file_model_new),
	(file_model_refresh), (file_model_get_uri):
	* plugins/file-manager/file-model.h:
	* plugins/file-manager/file-view.c (file_view_button_press_event),
	(file_view_selection_changed), (file_view_sort_model),
	(file_view_init):
	* plugins/file-manager/plugin.c (on_gconf_notify):
	Ported file-manager to gio

2008-06-13  Naba Kumar  <naba@gnome.org>

	* plugins/file-loader/plugin.c (setup_recent_chooser_menu):
	Enabled tooltips for recent files to identify full paths.
